springboot-cicd/templates/route-ocp.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: "2024-04-23T12:02:32Z"
  labels:
    app: springboot-demo
    app.kubernetes.io/component: springboot-demo
    app.kubernetes.io/instance: springboot-demo
    app.kubernetes.io/name: springboot-demo
    app.kubernetes.io/part-of: springboot-demo-app
  name: springboot-demo
  namespace: springboot-cicd
  resourceVersion: "843806"
  uid: 88ccd4a7-5174-43ad-a85c-77be2032303e
spec:
  host: springboot-demo-springboot-cicd.apps.ocp4.piotr-owczarc.com
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: springboot-demo
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - lastTransitionTime: "2024-04-23T12:02:32Z"
          status: "True"
          type: Admitted
      host: springboot-demo-springboot-cicd.apps.ocp4.piotr-owczarc.com
      routerCanonicalHostname: router-default.apps.ocp4.piotr-owczarc.com
      routerName: default
      wildcardPolicy: None
